# mayfly

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  setup.py
bindings/: CMakeLists.txt
bindings/mayfly/: dicttopython.cpp  dicttopython.h  main.cpp  posesensor.cpp  sensor_module.cpp  sensorcapture.py  videocapture.py
bindings/mayfly/filters/: __init__.py  quat_compass.py  tilt_compensated_compass.py
bindings/mayfly/utils/: __init__.py  device.py
bindings/tests/: record_raw.py  replay_live.py  replay_raw.py  sensor.py  sensor_2vga.py  sensorcapture_test.py  test.py  test_all.py  test_cuda.py  test_single.py  tof.py  turbo_colormap.py
camera/: CMakeLists.txt  h264_encoder.cpp  h264_encoder.h  options.h  stream_info.h  synccameraencoder.cpp  synccameraencoder.h
camera/example/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  app.cpp  app.h  datasource.cpp  datasource.h  errorcorrection.cpp  errorcorrection.h  history.h  httpserver.cpp  httpserver.h  packet.cpp  packet.h  sensorclient.cpp  sensorclient.h  sensorserver.cpp  sensorserver.h  service.h  transfer.cpp  transfer.h
core/sensors/: CMakeLists.txt
core/sensors/camera/: CMakeLists.txt  datasourcecamera.cpp
core/sensors/clock/: CMakeLists.txt  datasourceclock.cpp
core/sensors/defaultclock/: CMakeLists.txt  datasourcedefaultclock.cpp
core/sensors/files/: CMakeLists.txt  datasourcefiles.cpp
core/sensors/imu/: CMakeLists.txt  datasourceimu.cpp
core/sensors/magnetometer/: CMakeLists.txt  datasourcemag.cpp
core/sensors/proxy/: CMakeLists.txt  datasourceproxy.cpp
core/sensors/ranging/: CMakeLists.txt  datasourceranging.cpp  ranging.cpp  ranging.h
core/sensors/status/: CMakeLists.txt  datasourcestatus.cpp
core/sensors/synccameramaster/: CMakeLists.txt  datasourcesynccameramaster.cpp
core/sensors/tag/: CMakeLists.txt  tag.cpp  tag.h  uwb.cpp  uwb.h
core/sensors/tof/: CMakeLists.txt  datasourcetof.cpp
data/public/: editservices.js  index.html  picam.css  picam.js  shared.js
data/public/components/chart-3.9.1/distLORT/: Chart.min.js
data/public/examples/: album.html  index-admin.html  offcanvas.css  offcanvas.html  offcanvas.js  stickyfooter.html
imu/: CMakeLists.txt  bmi088.cpp  bmi088.h  imu.cpp  imu.h
imu/example/: CMakeLists.txt  main.cpp
magnetometer/: CMakeLists.txt  magnetometer.cpp  magnetometer.h
magnetometer/bmm350/: bmm350.c  bmm350.h  bmm350_defs.h  bmm350_oor.c  bmm350_oor.h  coines.cpp  coines.h  common.c  common.h
magnetometer/example/: CMakeLists.txt  main.cpp
mayfly/: CMakeLists.txt  mayfly.cpp
memory/: CMakeLists.txt  cuda_alloc.cpp  cuda_alloc.h  pointer_tracking.h  tensor.cpp  tensor.h
packaging/: CMakeLists.txt  make_deb.sh
packaging/deb/: README
packaging/deb/mayfly_0.0.1-1_arm64/DEBIAN/: control  postinst  prerm
packaging/deb/mayfly_0.0.1-1_arm64/etc/mayfly/: config.json
packaging/deb/mayfly_0.0.1-1_arm64/lib/systemd/system/: mayfly.service
pcap/: CMakeLists.txt  pcap_rxtx.cpp  pcap_rxtx.h  set_monitor_mode.py
platform/: CMakeLists.txt  gpio.cpp  gpio.h  i2c.cpp  i2c.h  spi.cpp  spi.h
posesensor/: README.md  comserial.cpp  comserial.h  iserial.h  ttyserial.cpp  ttyserial.h  usb.cpp  usb.h
posesensor/example/: CMakeLists.txt  main.cpp
posesensor/python/examples/: mag_calib_example.txt  quat_compass.py  test.py  tilt.py
python/examples/camera_positioning/: README.md  base_measurements.json  camera_positioning.py  config_server.json  magnetometer_bias.json
python/examples/cuda_video/: README.md  cuda_video.py
python/examples/pcap_transfer/: README.md  config_client.json  config_server.json  pcap_transfer.py
python/examples/print_sensors/: README.md  print_sensors.py
python/examples/simple_camera/: config.json  simple_camera.py  simple_camera_cuda.py
python/examples/sync_cameras/: README.md  config_master_camera.json  config_other_camera.json  sync_cameras.py
python/examples/tof_camera/: README.md  config_server.json  tof_camera.py
shared/: CMakeLists.txt  crc32.cpp  crc32.h  dctquant16.cpp  dctquant16.h  dict.cpp  dict.h  file.cpp  file.h  linkdefines.h  math.cpp  math.h  medianfilter.cpp  medianfilter.h  misc.cpp  misc.h  net.cpp  net.h  queue.h  sha1.cpp  sha1.h  stb.cpp  stb_ext.cpp  stb_ext.h  std_ext.cpp  std_ext.h  thread.cpp  thread.h  types.h  viewtransform.cpp  viewtransform.h
shared/example/: CMakeLists.txt  crc_example.cpp  dct_example.cpp
tof/: CMakeLists.txt  arducam_tof.cpp  arducam_tof.h
tof/example/: CMakeLists.txt  main.cpp
uwb/: CMakeLists.txt  deca_dw_device_api.h  deca_spi.cpp  deca_spi.h  dw_device.cpp  dw_device.h  dw_regs.h  dw_vals.h  platform_io.cpp  platform_io.h
uwb/example/: CMakeLists.txt  main.cpp
video/: CMakeLists.txt  decoder.cpp  decoder.h  framedecoder.cpp  framedecoder.h  huffdecoder.cpp  huffdecoder.h
video/internal/: decoder_avcodec.cpp  decoder_cuda.cpp  decoder_null.cpp  decoder_openh264.cpp  decoder_plainh264.cpp
viewer/: CMakeLists.txt  viewer.cpp
